<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">校园客户端</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="home">图书馆藏</string>
    <string name="collect">教务系统</string>
    <string name="setting">设置</string>
    
    
    <!-- 设置 -->
    <string name="recommend_to_weixin_friend">推荐给微信好友</string>
    <string name="feedback">意见反馈</string>
    <string name="about_us">关于作者</string>
    <string name="app_recommend">应用推荐</string>
    <string name="clear_cache">清除缓存</string>
    <string name="mobile_number">QQ号</string>
    <string name="mobile_number_hint">方便我们尽快反馈</string>
    <string name="content_edit_hint">欢迎在这儿发表宝贵的意见哦~</string>

    <!-- AlertDualog 登陆-->
    <string name="login_username">账号：</string>
    <string name="login_password">密码：</string>
    <string name="login_checkcode">验证码：</string>
    <string name="login_ok">确定</string>
    <string name="login_cancel">取消</string>
    <string name="login_input_username">输入用户名</string>
    <string name="login_input_password">输入密码</string>
    <string name="login_inpit_checkcode">输入验证码</string>
    <string name="login_remember_password">记住密码</string>



    <!-- 关于客户端-->
    <string name="about_app">
            本软件由kellygod&lt;kellygod95@gmail.com>独立设计的一款莆田学院安卓校园客户端,本软件不会收集
        用户的任何信息，完全可以放心使用，所有涉及账号密码都是直接发送到对应的服务器上去。软件版权归作者本
        人所有；本软件开源到github.com/KellyGodLv/SchoolClient，任何人都可以使用，或者修改，但必
        须保留作者的相关信息。
    </string>
    <string name="student_course_table">学生课程表</string>
    <string name="student_course_exam_addr">考试查询</string>
    <string name="student_course_score">成绩查询</string>
</resources>
