<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:background="#eeeeee"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


    <TextView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/login_username" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/et_login_username"
        android:focusableInTouchMode="true"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/login_input_username"/>
    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <TextView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/login_password" />
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/et_login_password"
        android:focusableInTouchMode="true"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:password="true"
        android:hint="@string/login_input_password"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/login_checkcode"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_login_checkcode"
            android:focusableInTouchMode="true"
            android:singleLine="true"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_inpit_checkcode"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/cb_remember_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/login_remember_password"/>
        <ImageView
            android:id="@+id/iv_check_code"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:paddingLeft="20dp"
            android:layout_height="40dp" />
    </LinearLayout>
</LinearLayout>